# slow_wave

./: .gitignore  CITATION.cff  Makefile  PRD.md  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
configs/: agent_forgetting.yaml  agent_smoke.yaml  default.yaml  dream_full.yaml  dream_smoke.yaml  eval_full.yaml  eval_smoke.yaml  phase5_full.yaml  phase5_smoke.yaml  smoke.yaml  stream_smoke.yaml
docs/: PHASE0_CONTRACT.md  PHASE1_CONTRACT.md  PHASE2_CONTRACT.md  PHASE3_CONTRACT.md  PHASE4_CONTRACT.md  PHASE5_CONTRACT.md  RCCA_PHASE5_CRASH.md
paper/: CITATIONS_AUDIT.md  KEYS.md  RESULTS.md  main.tex  references.bib
paper/appendices/: A_datasheet.tex  B_model_card.tex  C_hyperparameters.tex  D_reproducibility.tex
paper/figures/: figures_manifest.json
paper/sections/: 00_frontmatter.tex  01_introduction.tex  02_related_work.tex  03_testbench_design.tex  04_experimental_protocol.tex  05_results_discussion.tex  06_limitations.tex  07_reproducibility.tex  08_conclusion.tex
phase5/: analysis.json  phase5_result.json
phase5/regime_balanced/: manifest.json
phase5/regime_distractor_heavy/: manifest.json
phase5/regime_signal_rich/: manifest.json
prereg/: preregistration.yaml
runs/: .gitkeep
scripts/: build_paper.sh
slow_wave/: __init__.py  config.py  embeddings.py  llm.py
slow_wave/agent/: __init__.py  budget.py  runner.py  wake.py
tests/: conftest.py  test_agent_budget.py  test_agent_determinism.py  test_agent_forgetting.py  test_agent_runner.py  test_agent_wake.py  test_config.py  test_dream_augment.py  test_dream_conflict.py  test_dream_decay.py  test_dream_downscale.py  test_dream_engine.py  test_dream_integration.py  test_dream_matrix.py  test_dream_replay.py  test_dream_transfer.py  test_embeddings.py  test_eval_analysis.py  test_eval_arms.py  test_eval_budget_match.py  test_eval_controls.py  test_eval_grid.py  test_eval_harness.py  test_eval_metrics.py  test_eval_phase5_integration.py  test_eval_prereg.py  test_eval_prune_metrics.py  test_eval_stats.py  test_hardening.py  test_llm.py  test_manifest.py  test_memory_protection.py  test_memory_retrieval.py  test_memory_stores.py  test_packaging.py  test_paper_figures.py  test_paper_numbers.py  test_phase5_committed_artifacts.py  test_phase5_confound_firewall.py  test_seeding.py  (+6 more)
(+44 files in other folders)
