[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slow-wave"
dynamic = ["version"]
description = "A test bench for sleep-inspired memory consolidation in autonomous AI agents."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "memory-consolidation",
    "continual-learning",
    "llm-agent",
    "sleep",
    "dream",
    "reproducibility",
]
authors = [{ name = "Slow Wave authors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
# Core dependencies — pinned to versions with cp311/cp312 wheels available today.
# Heavy / optional ML deps live under [project.optional-dependencies] (see also
# requirements-optional.txt) and are NOT needed for Phase 0 CI.
dependencies = [
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "numpy>=2.1,<3",
    "anthropic==0.112.0",
]

[project.optional-dependencies]
# Local embedding backend (Phase 1+) — heavy; pulls in torch.
embeddings = ["sentence-transformers>=3.0", "torch>=2.2"]
# Statistics suite (Phase 4+) — CIs, robust aggregates, significance tests.
stats = ["scipy>=1.13", "statsmodels>=0.14", "rliable>=1.2.0"]
# Plotting (Phase 5+) — publication-grade figures.
viz = ["matplotlib>=3.8", "seaborn>=0.13"]
# Vector index (Phase 2+) — in-process ANN.
vector = ["faiss-cpu>=1.8"]
# Test / development tooling — sufficient for Phase 0 CI.
dev = ["pytest==9.1.1"]
# Convenience union of every extra above.
all = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "rliable>=1.2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "faiss-cpu>=1.8",
    "pytest==9.1.1",
]

[project.scripts]
slow-wave-smoke = "slow_wave.repro.smoke:main"

[project.urls]
Homepage = "https://github.com/JusHoya/slow-wave"

[tool.setuptools.dynamic]
version = { attr = "slow_wave.__version__" }

[tool.setuptools.packages.find]
include = ["slow_wave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
